Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p><a href="https://smartmetrics.co">Instagram Analytics</a> page</p>
+      <p><a href="https://smartmetrics.co">Instagram Analytics</a> for Business.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/instagram-analytics/smartmetrics.co">Instagram Analytics</a> is maintained by <a href="https://github.com/instagram-analytics">instagram-analytics</a>.</span>
